# dummy-wca

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: push-image.yml
data/: records.json
data/CubeFactoryLeagueKalisz2026/: wcif.json  wcif_v2.json
data/competitions/: DebicaCubingSummer2024.json  SLSFInal2024.json  SLSFinal2024.json
data/competitions/BrizzonSylwesterOpen2024/: competition.json  wcif.json
data/competitions/CFLBrzeziny2025/: competition.json  wcif.json
data/competitions/CubeFactoryLeagueKalisz2026/: competition.json  wcif.json  wcif_v2.json
data/competitions/CubeFactoryLeagueZgierz2026/: competition.json  wcif.json  wcif_v2.json
data/competitions/DebicaCubingSummer2024/: competition.json
data/competitions/SLSFinal2024/: competition.json
data/competitions/WLSMarzec2026/: competition.json  wcif.json  wcif_v2.json
data/persons/: persons.json
data/users/2013KOSK01/: manageable-competitions.json  me.json
data/users/2013ROGA02/: manageable-competitions.json  me.json
data/users/2021KULA02/: manageable-competitions.json  me.json
data/users/2022GALA01/: manageable-competitions.json  me.json
src/: handler.rs  main.rs  route.rs  schema.rs  utils.rs
templates/: authorize.html
